--- a/style/style.css
+++ b/style/style.css
@@ -67,6 +67,10 @@ nav img {
     background-size: cover;
 }
 
+.cuadro-exotic1 img{
+    width: 400px;
+    height: 400px;
+}
 .cuadro-exotic2 {
     width: 100%;
     height: 600px;
