--- a/style/pedido.css
+++ b/style/pedido.css
@@ -61,6 +61,7 @@ nav img {
     justify-content: center;
     align-items: center;
     border-radius: 20px;
+    padding: 10px;
 }
 .cuadro-1{
     width: 1000px;
@@ -112,7 +113,7 @@ nav img {
 }
 .contenedor-2{
     width: 350px;
-    height: auto;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -126,28 +127,23 @@ nav img {
     justify-content: center;
     align-items: center;
     gap: 220px;
-    height: 40px;
+    height: 60px;
     width: 100%;
     border-bottom: 2px solid black;
 }
 .direccion{
-    height: 200px;
+    width: 100%;
+    height: 320px;
     display: flex;
     flex-direction: column;
     gap: 25px;
     justify-content: center;
-    padding: 5px;
     border-bottom: 2px solid black;
 }
 .direccion input{
     margin-left: 15px;
-    width: 300px;
-    height: 65px;
-}
-::placeholder{
-    position: relative;
-    top: -20px;
-    left: 10px;
+    height: 30px;
+    width: 310px;
 }
 .direccion h4{
     margin-left: 15px;
@@ -155,7 +151,14 @@ nav img {
 .direccion p{
     margin-left: 15px;
 }
-.contenedor-2 a{
+.boton{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.boton a{
     color: #000;
     text-decoration: none;
     width: 65px;
@@ -164,5 +167,14 @@ nav img {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+}
+.cuadroo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 220px;
+    height: 60px;
+    width: 100%;
+    border-bottom: 2px solid black;
 }
