--- a/style/conocenos.css
+++ b/style/conocenos.css
@@ -18,7 +18,7 @@ body{
 .div{
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-auto-rows: 20% 20% auto 10%;
+    grid-auto-rows: 20% 20% auto 22%;
     min-height: 100vh;
     justify-content: stretch;
     margin: auto;gap: .2rem;
@@ -49,7 +49,7 @@ body{
 .header li {
     list-style: none;
 }
-
+/*Es la etiqueta coloreada para que el usuario sepa en que pestaña esta*/
 .activa{
     background-color: #B1A7A6;
     padding: 10px;
@@ -68,6 +68,20 @@ body{
     background-color: #FFFFFF;
         box-shadow: 15px 5px 25px gray;
     grid-column: 1/3;
+    animation: animacion 2s ease-in;
+}
+
+/*Animaciòn del menù*/
+@keyframes animacion {
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 
 /*Segunda caja, "Nav" contiene la descripción de QUIENES SOMOS*/
@@ -78,10 +92,12 @@ body{
     justify-content: center;
 }
 
+
 /*Tercera caja, "Section" contiene la información de la misión y la visión*/
 .c3{
     grid-column:1/2;
 }
+
 
 /*Cuarta caja, "Aside" contiene una imagen relacionada a la carne*/
 .c4{
@@ -90,13 +106,112 @@ body{
 
 /*Quinta caja, "Footer" contiene las redes sociales y el contacto de la carníceria Andrés Sierra*/
 .c5{
+    background-color: #0b090a;
+    height: 100%;
     grid-column: 1/3;
-    background-color: #a4161a;
     display: flex;
     justify-content: center;
-    height: 100%;
     align-items: center;
 }
+
+/*Caja padre de las redes sociales*/
+.padre{
+    width: 95%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+/*Contenedor padre de "contacto" y "direcciòn"*/
+.localizacion{
+    height: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+/*Contendor con la informaciòn del horario que ofrece la canìceria*/
+.horario{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Contendor que contiene las redes sociales*/
+.redes{
+    width: 35%;
+    height: 100%;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+  .redes a:active,.redes a:focus,.redes a:hover
+  {
+    transition: 0.7;
+    opacity: 0.5;
+  }
+
+/*El pie de pagina quedarà con un color blanco que haga contraste con el fondo negro*/
+.info{
+    font-size: 20px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+.descripcion{
+    font-size: 16px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+/*Redes social "Facebook"*/
+.face{
+  background-image: url(../imagenes/facebook.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width:70px;
+  height:70px;
+  line-height:40px;
+  border-radius:100%;
+  background-color:#33353d;
+}
+
+/*Redes social "tiktok"*/
+.tiktok{
+    background-image: url(../imagenes/tiktok.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width:70px;
+    height:70px;
+    line-height:40px;
+    border-radius:100%;
+    background-color:#33353d;
+  }
+
+  /*Redes social "instagram"*/
+  .instagram{
+    background-image: url(../imagenes/instagram.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width:70px;
+    height:70px;
+    line-height:40px;
+    border-radius:100%;
+    background-color:#33353d;
+  }
+
+
 
 /*Estos contenedor contiene la información de la misión y la visión*/
 .grande{
@@ -132,6 +247,7 @@ body{
 /*estilos de los parrafos*/
 .parrafo{
     color: black;
+    font-size: 16px;
     margin-top: 15px;
     font-family: 'Roboto', sans-serif;
     margin-left: 20px;
@@ -141,6 +257,7 @@ body{
 /*estilo de los titulos*/
 .titulo{
     color: black;
+    font-size: 20px;
     margin-top: 20px;
     font-family: 'Roboto', sans-serif;
 }
@@ -151,8 +268,30 @@ body{
     .div{
         display: grid;
         grid-auto-columns: auto;
-    grid-auto-rows: .7fr 1.4fr 2.5fr 2.5fr .5fr ;
+    grid-auto-rows: .8fr 1.3fr 2fr 1.7fr 3fr ;
+    }
 
+    .padre{
+        justify-content: space-around;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .localizacion{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .horario{
+        width: 100%;
+        margin: 30px;
+    }
+
+    .redes{
+        width: 50%;
     }
 
     
@@ -173,22 +312,18 @@ body{
 
 
 .c2{
-    background-color: #d3d3d3;
     grid-column:1/3;
 
 }
 .c3{
-    background-color: #b1a7a6;
     grid-column:1/3;
 }
 
 .c4{
-    background-image: url(../imagenes/low-poly-grid-haikei.png);
     grid-column:1/3;
 }
 
 .c5{
-    background-color: #a4161a;
     grid-column:1/3;
 }
 
@@ -222,6 +357,49 @@ body{
         display:none;
     }
 
+    .padre{
+        justify-content: space-around;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .localizacion{
+        margin-top: 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .contacto2{
+        margin-top: 20px;
+    }
+
+    .horario{
+        width: 100%;
+        margin: 30px;
+    }
+
+    .redes{
+        align-items: start;
+        display: flex;
+        flex-direction: row;
+    }
+
+    /*Los iconos de las redes sociales se minimizan*/
+    .face{
+        width: 40px;
+        height: 40px;
+    }
+    .tiktok{
+        width: 40px;
+        height: 40px;
+    }
+    .instagram{
+        width: 40px;
+        height: 40px;
+    }
 }
 
 
