--- a/style/conocenos.css
+++ b/style/conocenos.css
@@ -19,7 +19,7 @@ body{
     display: grid;
     grid-template-columns: 50% 50%;
     grid-auto-rows: 20% 20% auto 22%;
-    min-height: 100vh;
+    min-height: 120vh;
     justify-content: stretch;
     margin: auto;gap: .2rem;
 }
@@ -36,6 +36,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 0px 50px 0px 50px;
+    position: sticky;
     top: 0;
 }
 
@@ -90,6 +91,10 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: linear-gradient(#ec67679a, #f3b071b3), url(https://th.bing.com/th/id/R.f412f452dfcad8d2480cb98cf0fb1082?rik=sPJHKv5FNVcv%2bg&pid=ImgRaw&r=0);;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 
