--- a/style/style.css
+++ b/style/style.css
@@ -281,3 +281,277 @@ footer {
     margin-top: 15px;
     font-size: 20px;
 }
+
+/*mediaquery */
+
+@media screen and (max-width:820px) {
+    nav {
+        width: 100%;
+        height: 140px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0px 50px 0px 50px;
+        top: 0;
+        transition: 0.7s;
+    }
+    
+    nav.bajar {
+        background-color: #ffffff;
+        position: fixed;
+        transition: 0.7s;
+        width: 100%;
+        height: 100px;
+    }
+    
+    .bajar img {
+        width: 0px;
+        height: 0px;
+    }
+    
+    nav a {
+        display: flex;
+        flex-direction: column  ;
+        text-decoration: none;
+        font-size: 20px;
+        margin: 20px;
+        color: #000;
+    }
+    
+    .activa {
+        background-color: #B1A7A6;
+        padding: 10px;
+        border-radius: 25px;
+    }
+    
+    nav li {
+        list-style: none;
+    }
+    
+    nav img {
+        width: 120px;
+        height: 120px;
+        padding: 12px;
+    }
+
+    .cuadro-exotic1 {
+        width: 100%;
+        height: 600px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-image: linear-gradient(rgba(61, 59, 59, 0.644), rgba(133, 129, 129, 0.692)), url('../imagenes/carne.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    
+    .cuadro-exotic1 img {
+        width: 400px;
+        height: 400px;
+    }
+    
+.cuadro-exotic2 {
+    width: 100%;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #161A1D;
+    color: #B1A7A6;
+}
+
+.texto {
+    width: 300px;
+    height: 200px;
+    padding: 20px;
+    margin-left: 60px;
+}
+
+.texto h1 {
+    font-size: 40px;
+}
+
+.texto p {
+    font-size: 25px;
+    margin-top: 25px;
+}
+
+.texto2 a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #B1A7A6;
+    border-left: 2px solid #B1A7A6;
+    border-right: 2px solid #B1A7A6;
+    padding: 10px;
+    width: 200px;
+    height: 50px;
+    margin-right: 50px;
+}
+
+.botones {
+    display: flex;
+    flex-direction: row;
+}
+
+.botones i {
+    font-size: 30px;
+    margin-right: 25px;
+}
+
+.botones h4 {
+    font-size: 30px;
+}
+
+.botones p {
+    font-size: 20px;
+}
+.mapa {
+    width: 100%;
+    height: 600px;
+    background-color: #000;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.cuadro-exotic3 {
+    height: 400px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../imagenes/low-poly-grid-haikei.png);
+    background-repeat: round;
+    background-size: cover;
+}
+
+.slider {
+    border-radius: 5px;
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+}
+
+.slider ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.slider ul li {
+    position: relative;
+    display: none;
+    height: 100%;
+    color: #B1A7A6;
+}
+
+.slider ul li h1 {
+    font-size: 35px;
+    display: flex;
+    justify-content: center;
+}
+
+.slider ul li p {
+    font-size: 25px;
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+/* buttons */
+.slider .buttons {
+    position: absolute;
+    top: 40%;
+    width: 100%;
+}
+
+.slider .buttons .next {
+    font-size: 2rem;
+    right: 0;
+    position: absolute;
+    cursor: pointer;
+    width: 50px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    color: #ffffff;
+}
+
+.slider .buttons .prev {
+    font-size: 2rem;
+    left: 0;
+    position: absolute;
+    cursor: pointer;
+    width: 50px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    color: #ffffff;
+}
+
+/* slider animation */
+.slider ul li {
+    animation-name: fade;
+    animation-duration: 2.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .2
+    }
+
+    to {
+        opacity: 1
+    }
+}
+footer {
+    height: 900px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.imagen img {
+    width: 300px;
+    height: 300px;
+}
+
+.contenido {
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.textos {
+    width: 350px;
+    height: 100px;
+    gap: 25px;
+}
+
+.textos h4 {
+    margin-top: 65px;
+    font-size: 25px;
+}
+
+.textos p {
+    margin-top: 15px;
+    font-size: 20px;
+}
+}
