--- a/crud/client/src/App.css
+++ b/crud/client/src/App.css
@@ -1,3 +1,31 @@
 .App {
-  text-align: center;
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+}
+.datos{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
+.datos input{
+  width: 300px;
+  height: 30px;
+  font-size: 20px;
+  padding-left: 10px;
+  border-radius: 50px;
+  margin: 5px;
+}
+@media screen and(max-width: 700px) {
+  .datos{
+    display: inline-block;
+  }
+}
+.datos button{
+  width: 320px;
+  height: 50px;
+  margin-top: 15px;
+  
 }
