--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -4,6 +4,52 @@ body {
     align-items: center;
     width: 98.60vw;
 }
+nav {
+    width: 982px;
+    height: 140px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 50px 0px 50px;
+    top: 0;
+    transition: 0.7s;
+}
+
+nav.bajar {
+    background-color: #ffffff;
+    position: fixed;
+    transition: 0.7s;
+    width: 100%;
+    height: 100px;
+}
+
+.bajar img {
+    width: 0px;
+    height: 0px;
+}
+
+nav a {
+    text-decoration: none;
+    font-size: 20px;
+    margin: 30px;
+    color: #000;
+}
+
+.activa {
+    background-color: #B1A7A6;
+    padding: 10px;
+    border-radius: 25px;
+}
+
+nav li {
+    list-style: none;
+}
+
+nav img {
+    width: 120px;
+    height: 120px;
+    padding: 12px;
+}
 
 .cuadro-exotic1 {
     width: 100%;
@@ -133,4 +179,42 @@ iframe {
     color: white;
     padding: 5px 10px;
     font-size: 14px;
+}
+footer {
+    height: 600px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.imagen img {
+    width: 400px;
+    height: 400px;
+}
+
+.contenido {
+    height: 600px;
+    width: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 2px;
+}
+
+.textos {
+    width: 280px;
+    height: 280px;
+}
+
+.textos h4 {
+    margin-top: 65px;
+    font-size: 35px;
+}
+
+.textos p {
+    margin-top: 15px;
+    font-size: 20px;
 }
