--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -15,7 +15,7 @@ nav {
     transition: 0.7s;
 }
 
-nav.bajar {
+nav.bajar_1 {
     background-color: #ffffff;
     position: fixed;
     transition: 0.7s;
