--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -23,7 +23,7 @@ nav.bajar_1 {
     height: 100px;
 }
 
-.bajar img {
+.bajar_1 img {
     width: 0px;
     height: 0px;
 }
@@ -112,11 +112,14 @@ nav img {
 .botones {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.botones i {
-    font-size: 30px;
+.botones img {
     margin-right: 25px;
+    width: 40px;
+    height: 40px;
 }
 
 .botones h4 {
@@ -128,8 +131,8 @@ nav img {
 }
 
 .mapa {
-    width: 100%;
-    height: 860px;
+    width: 260px;
+    height: 260px;
     background-color: #000;
 }
 
@@ -144,42 +147,13 @@ iframe {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('https://www.recetas-chinas.com/base/stock/Recipe/151-image/151-image_web.jpg');
+    background-image: url('/public/imagenes/low-poly-grid-haikei.png');
     background-repeat: round;
     background-size: cover;
 }
 
 
-.slider {
-    position: relative;
-    width: 80%;
-    max-width: 800px;
-    overflow: hidden;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-}
 
-.slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-}
-
-.slide img {
-    width: 100%;
-    height: auto;
-}
-
-.caption {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 5px 10px;
-    font-size: 14px;
-}
 footer {
     height: 600px;
     display: flex;
