--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -1,257 +1,35 @@
-body {
+.caja1{
+    background-color: #ba181b49;
+    padding: 25px;
+    width: 98.45%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 98.60vw;
-}
-.div{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-auto-rows: 20% 20% auto 22%;
-    min-height: 120vh;
-    justify-content: stretch;
-    margin: auto;gap: .2rem;
-}
-
-/*Las cinco cajas creadas*/
-.caja{
     text-align: center;
-    display: flex;
-}
-
-/*En la cabecera se encuentran los items ordenados con un display flex, esto permite que queden en fila */
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 50px 0px 50px;
-    position: sticky;
-    top: 0;
-}
-
-.header a {
-    text-decoration: none;
     font-size: 20px;
-    margin: 30px;
-    color: #000;
 }
 
-.header li {
-    list-style: none;
-}
-/*Es la etiqueta coloreada para que el usuario sepa en que pestaña esta*/
-.activa{
-    background-color: #B1A7A6;
-    padding: 10px;
-    border-radius: 25px;
-}
-/*La imagen contiene el logo de la carníceria Andrés Sierra*/
-.header img {
-    width: 150px;
-    height: 150px;
-    padding: 12px;
-}
-
-
-/*Primera caja, "header" contiene el menú de la página*/
-.c1{
-    background-color: #FFFFFF;
-        box-shadow: 15px 5px 25px gray;
-    grid-column: 1/3;
-    animation: animacion 2s ease-in;
-}
-
-/*Animaciòn del menù*/
-@keyframes animacion {
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0.5;
-    }
-    100%{
-        opacity: 1;
-    }
-}
-
-/*Segunda caja, "Nav" contiene la descripción de QUIENES SOMOS*/
-.c2{
-    grid-column: 1/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-image: linear-gradient(#ec67679a, #f3b071b3), url(https://th.bing.com/th/id/R.f412f452dfcad8d2480cb98cf0fb1082?rik=sPJHKv5FNVcv%2bg&pid=ImgRaw&r=0);;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-
-/*Tercera caja, "Section" contiene la información de la misión y la visión*/
-.c3{
-    grid-column:1/2;
-}
-
-
-/*Cuarta caja, "Aside" contiene una imagen relacionada a la carne*/
-.c4{
-    grid-column:2/3;
-}
-
-/*Quinta caja, "Footer" contiene las redes sociales y el contacto de la carníceria Andrés Sierra*/
-.c5{
-    background-color: #0b090a;
+.contenedorMVI{
+    background-color: #D3D3D3;
+    width: 98.45%;
     height: 100%;
-    grid-column: 1/3;
+    padding: 25px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
-/*Caja padre de las redes sociales*/
-.padre{
-    width: 95%;
-    height: 100%;
+.contenedorMVI h2{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content:center;
+    text-align:end;
 }
-
-/*Contenedor padre de "contacto" y "direcciòn"*/
-.localizacion{
-    height: 100%;
-    align-items: center;
+.contenedorMVI p{
     display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-}
-
-/*Contendor con la informaciòn del horario que ofrece la canìceria*/
-.horario{
-    width: 30%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-/*Contendor que contiene las redes sociales*/
-.redes{
-    width: 35%;
-    height: 100%;
-    justify-content: space-around;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-
-  .redes a:active,.redes a:focus,.redes a:hover
-  {
-    transition: 0.7;
-    opacity: 0.5;
-  }
-
-/*El pie de pagina quedarà con un color blanco que haga contraste con el fondo negro*/
-.info{
+    justify-content:center;
+    text-align:center;
     font-size: 20px;
-    color: white;
-    font-family: 'Roboto', sans-serif;
 }
 
-.descripcion{
-    font-size: 16px;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-}
-
-/*Redes social "Facebook"*/
-.face{
-  background-image: url();
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width:70px;
-  height:70px;
-  line-height:40px;
-  border-radius:100%;
-  background-color:#33353d;
-}
-
-/*Redes social "tiktok"*/
-.tiktok{
-    background-image: url();
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width:70px;
-    height:70px;
-    line-height:40px;
-    border-radius:100%;
-    background-color:#33353d;
-  }
-
-  /*Redes social "instagram"*/
-  .instagram{
-    background-image: url();
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width:70px;
-    height:70px;
-    line-height:40px;
-    border-radius:100%;
-    background-color:#33353d;
-  }
-
-
-
-/*Estos contenedor contiene la información de la misión y la visión*/
-.grande{
-    display: flex;
-    flex-direction: row;
-    margin-top: 20px;
-    color: black;
-    width: 100%;
-}
-
-
-.uno{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-}
-
-
-/*Este contenedor tiene la imagen del carnicero*/
-.dos{
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.imagen img{
-    width: 220px;
-    height: 220px; 
-}
-
-/*estilos de los parrafos*/
-.parrafo{
-    color: black;
-    font-size: 16px;
-    margin-top: 15px;
-    font-family: 'Roboto', sans-serif;
-    margin-left: 20px;
-    margin-right: 20PX;
-}
-
-/*estilo de los titulos*/
-.titulo{
-    color: black;
-    font-size: 20px;
-    margin-top: 20px;
-    font-family: 'Roboto', sans-serif;
+.contenedorMVI img{
+    border-radius: 3pc;
 }
