--- a/cliente/src/componentes/pedidos/pedidos.css
+++ b/cliente/src/componentes/pedidos/pedidos.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 98.60vw;
+    
 }
 nav {
     width: 1249px;
@@ -169,3 +170,141 @@ nav img {
     width: 100%;
     border-bottom: 2px solid black;
 }
+/*productos */
+.carnes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #d3d3d3;
+    width: 100%;
+    height: 140px;
+}
+.carnes li{
+    list-style:none ;
+    display: flex;
+    flex-direction: row;
+}
+.carnes a{
+    text-decoration: none;
+    font-size: 20;
+    color: black;  
+    padding: 30px; 
+}
+
+.carnes p{
+    display: flex;
+    justify-content: center;
+}
+.carnes a img{
+    width: 70px;
+    height: 70px;
+}
+
+
+/**/
+.card {
+    width: 190px;
+    height: 254px;
+    padding: .8em;
+    background: #f5f5f5;
+    position: relative;
+    overflow: visible;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+   }
+   
+   .card-img {
+    background-color: #ffcaa6;
+    height: 40%;
+    width: 100%;
+    border-radius: .5rem;
+    transition: .3s ease;
+   }
+   
+   .card-info {
+    padding-top: 10%;
+   }
+   
+   svg {
+    width: 20px;
+    height: 20px;
+   }
+   
+   .card-footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    border-top: 1px solid #ddd;
+   }
+   
+   /*Text*/
+   .text-title {
+    font-weight: 900;
+    font-size: 1.2em;
+    line-height: 1.5;
+   }
+   
+   .text-body {
+    font-size: .9em;
+    padding-bottom: 10px;
+   }
+   
+   /*Button*/
+   .card-button {
+    border: 1px solid #252525;
+    display: flex;
+    padding: .3em;
+    cursor: pointer;
+    border-radius: 50px;
+    transition: .3s ease-in-out;
+   }
+   
+   /*Hover*/
+   .card-img:hover {
+    transform: translateY(-25%);
+    box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+   }
+   
+   .card-button:hover {
+    border: 1px solid #ffcaa6;
+    background-color: #ffcaa6;
+   }
+   /*boton desplegable*/
+   .padre-desplegar {
+    position: relative;
+  }
+  
+  .producto {
+    text-align: center;
+    font-size: 20px;
+    margin: 30px;
+    color: #000;
+    cursor: pointer;
+  }
+  
+  .desplegar {
+    display: none;
+    background-color: #0000005d;
+    z-index: 1;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  .desplegar a {
+    top: 50px;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .padre-desplegar:hover .desplegar {
+    display: block;
+  }
+  
+  .desplegar:hover {
+    display: block;
+  }
