--- a/cliente/src/componentes/pedidos/pedidos.css
+++ b/cliente/src/componentes/pedidos/pedidos.css
@@ -385,3 +385,27 @@ footer {
     margin-bottom: 60px;
     font-size: 1.2rem;
 }
+svg{
+    width: 40px;
+    height: 40px;
+}
+
+.card-button {
+    border: 1px solid #252525;
+    display: flex;
+    padding: .3em;
+    cursor: pointer;
+    border-radius: 50px;
+    transition: .3s ease-in-out;
+   }
+   
+   /*Hover*/
+   .card-img:hover {
+    transform: translateY(-25%);
+    box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+   }
+   
+   .card-button:hover {
+    border: 1px solid #ffcaa6;
+    background-color: #ffcaa6;
+   }
