--- a/cliente/src/componentes/pedidos/pedidos.css
+++ b/cliente/src/componentes/pedidos/pedidos.css
@@ -5,48 +5,6 @@ body {
     width: 98.60vw;
     
 }
-nav {
-    width: 1249px;
-    height: 140px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 50px 0px 50px;
-    top: 0;
-    transition: 0.7s;
-}
-
-nav.bajar {
-    background-color: #ffffff;
-    position: fixed;
-    transition: 0.7s;
-    width: 100%;
-    height: 100px;
-}
-.bajar img{
-    width: 0px;
-    height: 0px;
-}
-nav a {
-    text-decoration: none;
-    font-size: 20px;
-    margin: 30px;
-    color: #000;
-}
-.activa{
-    background-color: #B1A7A6;
-    padding: 10px;
-    border-radius: 25px;
-}
-nav li {
-    list-style: none;
-}
-
-nav img {
-    width: 120px;
-    height: 120px;
-    padding: 12px;
-}
 .contenedor{
     width: 1010px;
     height: auto;
@@ -271,141 +229,40 @@ nav img {
     border: 1px solid #ffcaa6;
     background-color: #ffcaa6;
    }
-
-   .carnes{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #d3d3d3;
-    width: 100%;
-    height: 140px;
-}
-.carnes li{
-    list-style:none ;
-    display: flex;
-    flex-direction: row;
-}
-.carnes a{
-    text-decoration: none;
-    font-size: 20;
-    color: black;  
-    padding: 30px; 
-}
-
-.carnes p{
-    display: flex;
-    justify-content: center;
-}
-.carnes a img{
-    width: 70px;
-    height: 70px;
-}
-
-section{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-.galeria{
-    display: flex;
-    width: 800px;
-    height: 430px;
-}
-
-.galeria img{
-    width: 0px;
-    flex-grow: 1;
-    object-fit: cover;
-    opacity: .8;
-    transition: .6s ease;
-}
-
-.galeria img:hover{
-    cursor: pointer;
-    width: 500px;
-    opacity: 1;
-    filter: contrast(120%);
-}
-
-
-footer {
-    width: 40px;
-    height: 600px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
+   /*boton desplegable*/
+   .padre-desplegar {
+    position: relative;
+  }
+  
+  .producto {
     text-align: center;
-    align-items: center;
-}
-
-.imagen img {
-    width: 400px;
-    height: 400px;
-}
-
-.contenido {
-    height: 600px;
-    width: 600px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 2px;
-}
-
-.textos {
-    width: 280px;
-    height: 280px;
-}
-
-.textos h4 {
-    margin-top: 65px;
-    font-size: 35px;
-}
-
-.textos p {
-    margin-top: 15px;
     font-size: 20px;
-
-}
-
-.titulo{
-    margin-top: 40px;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.info{
-    margin-left: 250px;
-    margin-right: 250px;
-    margin-bottom: 60px;
-    font-size: 1.2rem;
-}
-svg{
-    width: 40px;
-    height: 40px;
-}
-
-.card-button {
-    border: 1px solid #252525;
-    display: flex;
-    padding: .3em;
+    margin: 30px;
+    color: #000;
     cursor: pointer;
-    border-radius: 50px;
-    transition: .3s ease-in-out;
-   }
-   
-   /*Hover*/
-   .card-img:hover {
-    transform: translateY(-25%);
-    box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
-   }
-   
-   .card-button:hover {
-    border: 1px solid #ffcaa6;
-    background-color: #ffcaa6;
-   }
+  }
+  
+  .desplegar {
+    display: none;
+    background-color: #0000005d;
+    z-index: 1;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  .desplegar a {
+    top: 50px;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .padre-desplegar:hover .desplegar {
+    display: block;
+  }
+  
+  .desplegar:hover {
+    display: block;
+  }
