--- a/cliente/src/componentes/pedidos/res.css
+++ b/cliente/src/componentes/pedidos/res.css
@@ -1,91 +1,289 @@
 html, body{
+   
     margin:0;
     padding:0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+:root{
+    --color1: #135337;
+    --color2:#9CCB9E;
+    --color3: #30303F;
+    --border: #C9C6C6;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
-    width: 100%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    letter-spacing: 0.03em;
-    line-height: 1.6;
+    font-family: 'Montserrat', sans-serif;
+    background-color: bisque;
 }
-.tittle{
-    text-align: center;
-    font-size:40px;
-    color: black;
-    margin-top: 100px;
-    font-weight: 100;
-}
+
 .container{
-    width: 100%;
-    max-width: 1200px;
-    height: 430px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: auto;
+    max-width: 1120px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
 }
-.container .card{
-    width: 330px;
-    height: 430px;
-    border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
-    over-flow:hidden;
-    margin: 20px;
+
+img{
+    max-width: 100%;
+}
+
+.banner{
+    margin: 50px 0;
+}
+
+.title{
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--color1);
+    margin-bottom: 30px;
+}
+
+.product-grid{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 1.5rem;
+    margin-bottom: 50px;
+}
+
+.product-grid__item{
+    background-color: #fff;
+    border-radius: 3px;
+    overflow: hidden;
+}
+
+.product-grid__imagen{
     text-align: center;
 }
-.container .card img{
-    width: 330px;
-    height: 220px;
-    background-image: url('https://bidea2.com/wp-content/uploads/2020/10/tomahawk.png');
-    background-repeat: no-repeat;
+
+.product-grid__info{
+    padding: 15px;
+    text-align: center;
 }
-.card-info {
-    padding-top: 10%;
-   }
-   
-   svg {
-    width: 20px;
-    height: 20px;
-   }
-   
-   .card-footer {
+
+.product-grid__name{
+    font-size: 16px;
+    color: var(--color3);
+    margin-bottom: 6px;
+    font-weight: 400;
+}
+
+.product-grid__price{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--color3);
+}
+
+.product-grid__btn{
+    margin-top: 20px;
+}
+
+.btn-default,
+.btn-border,
+.btn-primary{
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 10px;
-    border-top: 1px solid #ddd;
-   }
-   /*Text*/
-   .text-title {
-    font-weight: 900;
-    font-size: 1.2em;
-    line-height: 1.5;
-   }
-   
-   .text-body {
-    font-size: .9em;
-    padding-bottom: 10px;
-   }
-   
-   /*Button*/
-   .card-button {
-    border: 1px solid #252525;
-    display: flex;
-    padding: .3em;
+    height: 48px;
+    line-height: 48px;
+    outline: 0;
+    display: inline-block;
+    border-radius: 25px;
     cursor: pointer;
-    border-radius: 50px;
-    transition: .3s ease-in-out;
-   }
-   
-   /*Hover*/
-   .card-img:hover {
-    transform: translateY(-25%);
-    box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
-   }
-   
-   .card-button:hover {
-    border: 1px solid #ffcaa6;
-    background-color: #ffcaa6;
-   }
+    padding: 0 20px;
+
+    text-decoration: none;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-align: center;
+}
+
+.btn-default{
+    background-color: var(--color2);
+    color: var(--color1);
+}
+
+.btn-default:hover{
+    background-color: var(--color1);
+    color: #fff;
+}
+
+
+.btn-border{
+    border: 2px solid var(--color1);
+    color: var(--color1);
+    background-color: transparent;
+}
+
+.btn-border:hover{
+    background-color: var(--color2);
+    border-color: var(--color2);
+}
+
+.btn-primary{
+    background-color: var(--color1);
+    color: #fff;
+}
+
+.modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    background-color: black;
+    width: 100%;
+    max-width: 350px;
+    height: 100vh;
+
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: all .35s ease-in;
+
+    z-index: 20000;
+}
+
+.modal::after{
+    position: fixed;
+    top: 0;
+    right: 350px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .4);
+    z-index: 999;
+
+    opacity: 0;
+    content: '';
+    pointer-events: none;
+    transition: all .35s ease-in;
+}
+
+.modal.active{
+    visibility: visible;
+    opacity: 1;
+    transform: none;
+}
+
+.modal.active::after{
+    opacity: 1;
+    pointer-events: auto;
+}
+.modal__container{
+    height: 100%;
+    padding: 30px;
+    position: relative;
+    z-index: 1000;
+}
+
+.modal__close{
+    position: absolute;
+    left: -50px;
+    top: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--color2);
+    color: var(--color1);
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.modal__info{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    overflow: hidden;
+}
+
+.modal__header{
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid var(--border);
+}
+
+.modal__header h2{
+    font-size: 24px;
+    color: var(--color1);
+    font-weight: 600;
+}
+
+.modal__header h2 i{
+    margin-right: 10px;
+}
+
+.modal__body{
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: visible;
+    width: 100%;
+    flex-grow: 1;
+}
+
+.modal__item{
+    display: flex;
+    align-items: center;
+}
+
+.modal__item + .modal__item{
+    margin-top: 20px;
+}
+
+.modal__thumb{
+    width: 80px;
+}
+
+.modal__text-product{
+    width: calc(100% - 80px);
+    padding-left: 20px;
+}
+
+.modal__text-product p strong{
+    color: var(--color1);
+    margin-top: 6px;
+}
+
+.modal__footer{
+    padding-top: 30px;
+    margin-top: 30px;
+    border-top: 1px solid var(--border);
+}
+
+.modal__list-price ul li+li{
+    margin-top: 10px;
+}
+
+.modal__list-price ul li strong{
+    color: var(--color1);
+}
+
+.modal__total-cart{
+    font-size: 20px;
+    color: var(--color1);
+    margin: 20px 0;
+}
+
+.modal__btns{
+    padding-top: 30px;
+    border-top: 1px solid var(--border);
+}
+
+.modal__btns a+a{
+    margin-top: 15px;
+}
+
+@media (max-width: 820px){
+    .product-grid{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+
+@media (max-width: 600px){
+    .product-grid{
+        grid-template-columns: 1fr;
+    }
+}
