--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -166,3 +166,39 @@ nav img {
     font-size: 20px;
     color: #ffffff;
 }
+.footer{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #161A1D;
+    gap: 5px;
+}
+.info{
+    width: 400px;
+    height: 400px;
+    color: #ffffff;
+}
+.info li {
+    margin-top: 25px;
+}
+.info img{
+    margin-right: 25px;
+}
+.info h3{
+    border-bottom: 2px solid white;
+    width: 250px;
+    padding: 15px;
+}
+footer{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background-color: #161A1D;
+    border-top: 1px solid #B1A7A6;
+}
