--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -4,7 +4,53 @@ body {
     align-items: center;
     width: 98.60vw;
 }
-.caja1{
+
+nav {
+    width: 100%;
+    height: 140px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    top: 0;
+    transition: 0.7s;
+    background-color: #00000042;
+}
+
+nav.bajar_1 {
+    background-color: #00000059;
+    position: fixed;
+    transition: 0.7s;
+    width: 100%;
+    height: 100px;
+    color: black;
+    z-index: 3;
+}
+
+nav a {
+    text-decoration: none;
+    font-size: 20px;
+    margin: 30px;
+    color: #ffffff;
+}
+
+.activa {
+    border-top: 6px solid #e5383b;
+    padding: 2px;
+}
+
+nav li {
+    list-style: none;
+    margin-left: 85px;
+}
+
+nav img {
+    width: 120px;
+    height: 120px;
+    padding: 12px;
+}
+
+.caja1 {
     background-color: #ba181b49;
     padding: 25px;
     width: 100%;
@@ -14,7 +60,7 @@ body {
     font-size: 20px;
 }
 
-.contenedorMVI{
+.contenedorMVI {
     background-color: #D3D3D3;
     width: 100%;
     height: 100%;
@@ -24,18 +70,30 @@ body {
     align-items: center;
 }
 
-.contenedorMVI h2{
+.contenedorMVI h2 {
     display: flex;
-    justify-content:center;
-    text-align:end;
+    justify-content: center;
+    text-align: end;
 }
-.contenedorMVI p{
+
+.contenedorMVI p {
     display: flex;
-    justify-content:center;
-    text-align:center;
+    justify-content: center;
+    text-align: center;
     font-size: 20px;
 }
 
-.contenedorMVI img{
+.contenedorMVI img {
     border-radius: 3pc;
+}
+
+footer{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background-color: #161A1D;
+    border-top: 1px solid #B1A7A6;
 }
