--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -51,13 +51,16 @@ nav img {
 }
 
 .caja1 {
-    background-color: #ba181b49;
+    background-image: linear-gradient(rgba(128, 15, 15, 0.288), rgba(128, 15, 15, 0.288)), url('https://th.bing.com/th/id/R.9165abb488f2933905bb31eed94d3d1d?rik=PCqOdl3M9Y%2bJAA&pid=ImgRaw&r=0');
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 25px;
     width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
     font-size: 20px;
+    color: #ffffff;
 }
 
 .contenedorMVI {
