--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -1,4 +1,3 @@
-
 body {
     display: flex;
     flex-direction: column;
@@ -65,18 +64,20 @@ nav img {
 }
 
 .inform {
-    width: 400px;
+    max-width: 1000px;
     height: 600px;
-    margin-left: 20%;
+    margin-left: 6%;
     margin-top: 10%;
 }
 
 .inform h1 {
     color: #ffffff;
+    font-size: 55px;
 }
 
 .inform p {
     color: #ffffff;
+    font-size: 23px;
 }
 
 .caja_inicio {
@@ -116,7 +117,8 @@ nav img {
 .lineas::after {
     right: 150px;
 }
-.con{
+
+.con {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -126,7 +128,7 @@ nav img {
     margin-top: 3.5%;
 }
 
-.caja2_inicio{ 
+.caja2_inicio {
     width: 100%;
     height: 700px;
     background-color: #161A1D;
@@ -140,69 +142,100 @@ nav img {
     text-align: center;
     margin-top: 30px;
 }
-.conte{
+
+.conte {
     margin-top: 65px;
     display: flex;
-    flex-direction: row ;
+    flex-direction: row;
     width: 100%;
     justify-content: center;
     gap: 100px;
 }
-.tarjeta{
+
+.Linktarjetas {
+    text-decoration: none;
+}
+
+.tarjeta {
     width: 300px;
     height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-}
-.tarjeta a{
-    text-decoration: none;
     color: white;
     font-size: 20px;
+    padding: 10px;
+    border-radius: 10px;
 }
-.tarjeta img{
+.tarjeta:hover{
+    box-shadow: 0px 0px 5px 5px  rgba(128, 128, 128, 0.219);
+    border-radius: 10px;
+    transition-duration: unset;
+}
+.tarjeta img {
     width: 100%;
     height: 300px;
 }
-.tarjeta h3{
+
+.tarjeta h3 {
     font-size: 35px;
     color: #ffffff;
     border-bottom: 2px solid #ffffff;
     padding: 5px;
 }
-.tarjeta p{
+
+.tarjeta p {
     margin-top: 15px;
     font-size: 20px;
     color: #ffffff;
 }
-.footer{
+
+.footer {
     width: 100%;
-    height: 400px;
+    height: 450px;
     display: flex;
     flex-direction: row;
     background-color: #161A1D;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    align-items: start;
 }
-.info{
-    width: 200px;
+
+.info {
+    width: 450px;
     height: 400px;
     color: #ffffff;
 }
+
 .info li {
-    max-width: 100%;
+    max-width: 400px;
     margin-top: 25px;
+    font-size: 20px;
 }
-.info img{
+
+.Link {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.Link:hover {
+    text-decoration: underline;
+}
+
+.info {
+    color: #ffffff;
+}
+
+.info img {
     margin-right: 10px;
 }
-.info h3{
+
+.info h3 {
     border-bottom: 2px solid white;
-    width: 250px;
-    padding: 15px;
+    width: 400px;
+    padding: 10px;
 }
-footer{
+
+footer {
     width: 100%;
     height: 100px;
     display: flex;
@@ -212,7 +245,8 @@ footer{
     background-color: #161A1D;
     border-top: 1px solid #B1A7A6;
 }
-footer img{
+
+footer img {
     margin-top: -10px;
     margin-left: 25px;
 }
